fix: add centered alignment options to snackbar and stackbar components

--- a/src/styles/layouts.module.scss
+++ b/src/styles/layouts.module.scss
@@ -24,6 +24,10 @@
     align-items: start;
   }
 
+  &--centered {
+    align-items: center;
+  }
+
   &--end {
     align-items: end;
   }
@@ -58,6 +62,10 @@
     @extend .stackbar;
 
     gap: var(--size-pos-xsmall);
+  }
+
+  &--start {
+    align-items: start;
   }
 
   &--centered {
